New Control axes setup
Changed to 1 main master setup

--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -705,6 +705,11 @@
                     text-align: right;
                 }
                 
+                .label-right-inactive {
+                    fill: #aaa;
+                    font-style: italic;
+                }
+                
                 .triangle-button {
                     position: absolute;
                     bottom: 10px;
