--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -29,15 +29,7 @@
 		padding: 16px;
 	}
 	
-	#temp-output {
-	    position: absolute;
-	    left: 40%;
-	    top: 100px;
-	    width: 30%;
-	    padding: 20px;
-	}
-	
-    #temp-output2 {
+    #temp-output {
         position: absolute;
         left: 70%;
         top: 100px;
@@ -695,20 +687,7 @@
                 left: 0;
                 top: 0;
             }
-                    
-                .slider-axis {
-                    stroke: #000;
-                    stroke-width: 2;
-                }
-                
-    
-                .slider-handle {
-                    position: absolute;
-                    top: 3px;
-                    cursor: pointer;
-                }
-                
-      
+
                 
                 li:first-child .slider-label-first {
                     display: none;
@@ -778,40 +757,65 @@
                 opacity: 1;
             }	
             
-/************ labels etc on control ***************/
+            
+            
+            
+/************ sliders ***************/
         
-    .slider-label {
-        font-size: 9px;
-    }
-    
-    .label-center {
+ 
+    .slider-container {
         
-    }
-    
-    .label-right {
-        text-align: right;
-    }
-    
-    .label-right-inactive {
-        fill: #aaa;
-        font-style: italic;
-    }
-    
-    .triangle-button {
-        position: absolute;
-        bottom: 10px;
-        left: 10px;
-        cursor: pointer;
-    }
-    
-    .control-remove-master {
-        font-family: "glyphs";
-        cursor: pointer;
-    }
-    
-        .control-remove-master:hover {
-            fill: #f00;
+    }      
+      
+        .slider-axis {
+            stroke: #000;
+            stroke-width: 2;
+            fill: none;
         }
+
+        .slider-handle {
+            position: absolute;
+            top: 3px;
+            cursor: pointer;
+            fill: #000;
+        } 
+             
+        .slider-label {
+            font-size: 9px;
+            cursor: default;
+        }
+    
+            .label-right-inactive {
+                fill: #aaa;
+                font-style: italic;
+            }
+            
+            .slider-label-output {
+                fill: #f85c37;
+            }
+    
+        .triangle-button {
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
+            cursor: pointer;
+        }
+    
+        .slider-button {
+            font-family: "glyphs";
+            cursor: pointer;
+            opacity: 0;
+            transition: all 0.3s ease;
+            fill: #000;
+        }
+        
+            .slider-button.slider-remove-master {
+                fill: #f00;
+            }
+        
+            .slider-label-right-container:hover .slider-button {
+                opacity: 1;
+            }
 
 
 
