--- a/app/lib/ui/redPill/textEditor/textEditor.less
+++ b/app/lib/ui/redPill/textEditor/textEditor.less
@@ -21,3 +21,9 @@ mtk-text-editor .CodeMirror {
     height: 400px;
 
 }
+
+mtk-text-editor label select {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+}
