--- a/home/css/style.css
+++ b/home/css/style.css
@@ -77,6 +77,7 @@
     h1 {
         font-weight: 100;
         font-size: 54px;
+        line-height: 50px;
         text-align: center;
     }
     
