--- a/home/css/style.css
+++ b/home/css/style.css
@@ -100,6 +100,10 @@
         font-size: 32px;
     }
     
+        .bullets:after {
+            content: "•••";
+        }
+    
         .bullets.black {
             color: #000;
         }
