--- a/home/css/style.css
+++ b/home/css/style.css
@@ -136,6 +136,10 @@
             section.red a:hover {
                 color: #000;
             }
+            
+    section.grey {
+        background: #ddd;
+    }
     
     
     /* intro */
@@ -166,6 +170,34 @@
         
             .subscript a:hover {
                 text-decoration: underline;
+            }
+            
+            
+/* blue pill */
+
+    #blue-pill {
+
+    }
+
+    .bluepill-left {
+        width: 40%;
+        float: left;
+        padding-right: 20px;
+    }
+    
+    .bluepill-right {
+        width: 60%;
+        min-height: 500px;
+        float: left;
+    }
+    
+        .bluepill-right designspace {
+            height: 500px;
+        }
+        
+            .bluepill-right designspace .design-space {
+                height: 461px;
+                position: relative;
             }
 
     
