--- a/home/css/style.css
+++ b/home/css/style.css
@@ -163,7 +163,7 @@
         color: #ED1C24;
     }
     
-        .subscript a {
+        section .subscript a {
             color: #000;
             text-decoration: none;
         }
