font by paragraph and temp solution for linebreak

--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -605,6 +605,13 @@
                 display: inline-block;
                 white-space: pre;
             }
+            
+            #specimen-content ul li.glyph-linebreak {
+                display: block;
+                width: 100%;
+                clear: both;
+                white-space: normal;
+            }
 	
 	
 	
