--- a/slider/templates/specimen.html
+++ b/slider/templates/specimen.html
@@ -18,8 +18,8 @@
 
 <!-- standard view -->
 <div id="specimen-content">
-    <ul ng-if="selectedSpecimen.name != 'glyph range'">
-        <li ng-class="{'selected-glyph':askIfEditGlyph(thisglyph.glyph, thisglyph.master.name), 'glyph-linebreak': thisglyph.linebreak}" ng-click="toggleGlyph(thisglyph.glyph, thisglyph.master.name)" ng-repeat="thisglyph in filteredGlyphs track by $index" ng-style="{'font-size': fontSize + 'px', 'line-height': fontSize + 'px'}">
+    <ul ng-if="selectedSpecimen.name != 'glyph range'"  ng-style="{'font-size': fontSize + 'px', 'line-height': fontSize + 'px'}">
+        <li ng-repeat="thisglyph in filteredGlyphs track by $index" ng-class="{'selected-glyph':askIfEditGlyph(thisglyph.glyph, thisglyph.master.name), 'glyph-linebreak': thisglyph.linebreak}" ng-click="toggleGlyph(thisglyph.glyph, thisglyph.master.name)">
             <div class="spec-glyph-box" ng-style="{'font-family':thisglyph.master.family, 'font-weight':thisglyph.master.weight}">{{thisglyph.glyph}}</div>
         </li>
     </ul>
