--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -525,8 +525,7 @@
                 width: 16px;
                 height: 16px;
             }
-    
-       
+         
    #font-by {
     float: right;
    }
@@ -535,52 +534,73 @@
     display: inline-block;
     float: left;
    }
-   
-   .glyph-range {
-       clear: both;
-       overflow: auto;
-       margin-bottom: 20px;
-       list-style: none;
-   }
-   
-   .glyph-box {
-       float: left;
-       background: #fff;
-       width: 100px;
-       font-size: 60px;
-       text-align: center;
-       padding: 30px;
-       border: 1px solid #ddd;
-   }
-
-
+              
+    #non-glyph-range {
+        
+    }
+    
     #specimen-content ul {
         padding: 0;
         margin: 0;
     }
     
-        #specimen-content ul li {
-            list-style: none;
-            display: inline-block;
-            border-bottom: 4px solid transparent;
-            margin-bottom: -4px;
-            cursor: default;
-        }
-        
-        #specimen-content ul li.selected-glyph {
-            border-bottom: 4px solid #00f;
-        }
-        
-            #specimen-content ul li .spec-glyph-box {
+            #specimen-content ul li {
+                list-style: none;
                 display: inline-block;
-                white-space: pre;
+                border-bottom: 4px solid transparent;
+                margin-bottom: -4px;
+                cursor: default;
             }
             
-            #specimen-content ul li.glyph-linebreak {
-                display: block;
+            #specimen-content ul li.selected-glyph {
+                border-bottom: 4px solid #00f!important;
             }
+            
+                #specimen-content ul li .spec-glyph-box {
+                    display: inline-block;
+                    white-space: pre;
+                }
+                
+                #specimen-content ul li.glyph-linebreak {
+                    display: block;
+                }
+                
+                    .unselectable {                
+                        -webkit-touch-callout: none;
+                        -webkit-user-select: none;
+                        -khtml-user-select: none;
+                        -moz-user-select: none;
+                        -ms-user-select: none;
+                        user-select: none;
+                    }
 	
-	
+    #glyph-range {
+    }
+     
+        #specimen-content ul.glyph-range-master {
+            margin-bottom: 40px;
+        }
+   
+           #specimen-content ul li.glyph-box {
+               display: inline-block;
+               background: #fff;
+               width: 115px;
+               height: 140px;
+               font-size: 60px;
+               text-align: center;
+               padding: 30px;
+               border: 1px solid #ddd;
+               margin: 4px;
+               white-space: pre;
+           }
+           
+    .rubberband {
+        background: rgba(0, 0, 0, 0.1);
+        border: 1px dashed #000;
+    }
+           
+           
+           
 	
 /************ design space ****************/
 
